fix: :bug: responsive on mobile

--- a/wp-content/themes/lojaonline/style.css
+++ b/wp-content/themes/lojaonline/style.css
@@ -26,11 +26,21 @@ Theme name: Loja Online
   height: 550px;
 }
 
-.most-sold-product-image{
-  width:126px;
-  height:126px;
+.most-sold-product-image {
+  width: 126px;
+  height: 126px;
 }
 
+@media only screen and (max-width: 992px) {
+  .most-sold-product-image {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: auto;
+    width: 100%;
+    height: 100%;
+  }
+}
 /*
 
 .owl-nav {
@@ -169,7 +179,7 @@ Theme name: Loja Online
   }
 }
 
-.search-form-input{
+.search-form-input {
   display: flex;
 }
 
@@ -177,13 +187,14 @@ Theme name: Loja Online
 .button-search-input {
   appearance: none;
   background-color: #000000;
-  border: 2px solid #1A1A1A;
+  border: 2px solid #1a1a1a;
   border-radius: 15px;
   box-sizing: border-box;
-  color: #FFFFFF;
+  color: #ffffff;
   cursor: pointer;
   display: inline-block;
-  font-family: Roobert,-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
+  font-family: Roobert, -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica,
+    Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   font-size: 16px;
   font-weight: 600;
   line-height: normal;
@@ -194,7 +205,7 @@ Theme name: Loja Online
   padding: 16px 24px;
   text-align: center;
   text-decoration: none;
-  transition: all 300ms cubic-bezier(.23, 1, 0.32, 1);
+  transition: all 300ms cubic-bezier(0.23, 1, 0.32, 1);
   user-select: none;
   -webkit-user-select: none;
   touch-action: manipulation;
